fix: Resolve modal refresh bug and remove dead code
**Bug Fix:**
- Fix empty table after template/job creation
- Modal closes after HTMX swap completes (htmx:afterSwap)
- Remove HX-Trigger: closeModal header

**Code Cleanup:**
- Delete JobUpdateHelper (unused, 48 lines)
- Remove createParameterReference() (always returned Map.of())
- Remove prepareJobParameters() (only called by deleted class)
- Extract validateExternalStorage() helper (DRY)
- Move toView() to BaseController (eliminate duplication)

**Tests:** All 236 tests passing

Result: -136 lines dead/redundant code